--- a/platformio.ini
+++ b/platformio.ini
@@ -12,20 +12,17 @@
 default_envs = Lolin32Lite_ePaper
 boards_dir = ./boards
 
-
 [common_env_data]
 build_flags = 
-	-D VERSION=\"V0.01\" 
+	-D VERSION=\"V0.02\"
 	-D PROGNAME=\"ePaperAnchorAlarm\"
 	-D BUILD_TIME=__TIMESTAMP__
-	-D BUILD_DATE=\"2026-01-18\"
+	-D BUILD_DATE=\"2026-01-29\"
 	-D BUILD_ENV_NAME=$PIOENV
 	-D BUILD_PLATFORM=$PIOPLATFORM
 lib_deps = 
 	zinggjm/GxEPD2@^1.6.0
 	olikraus/U8g2_for_Adafruit_GFX@^1.8.0
-;lib_extra_dirs = 
-;	c:\PlatformIO\ManualAddedLibs\
 src_dir = src
 
 [env]
@@ -38,14 +35,13 @@ monitor_filters = esp32_exception_decoder, time, log2file
 board = lolin32
 build_flags = 
 	${common_env_data.build_flags}
-	-D LOLIN32_LITE      # Board is AzDelivery Lolin32 Lite, cabling for ePaperBarograf, WeAct 1.54 ePaper
-	-D PCB_BOARD		 # define this if PCB board, with voltage measurement on GPIO 39
-	;-D HANDMADE_BOARD	 # define this if handmade board, with voltage measurement on GPIO 35
-	-D HAS_BUZZER		 # set this define if alarm buzzer is present
-
+	-D LOLIN32_LITE
+	-D PCB_BOARD
+	-D HAS_BUZZER
 lib_deps = 
 	${common_env_data.lib_deps}
 	madhephaestus/ESP32Encoder@^0.12.0
+	thomasfredericks/Bounce2@^2.72
+	tinyu-zhao/TinyGPSPlus-ESP32@^0.0.2
 
-;lib_extra_dirs = 
-;	${common_env_data.lib_extra_dirs}
+lib_extra_dirs = c:\PlatformIO\ManualAddedLibs\ ; to include simple timer
