--- a/platformio.ini
+++ b/platformio.ini
@@ -14,7 +14,7 @@ boards_dir = ./boards
 
 [common_env_data]
 build_flags = 
-	-D VERSION=\"V0.08\"
+	-D VERSION=\"V0.08a\"
 	-D PROGNAME=\"ePaperAnchorAlarm\"
 	-D BUILD_TIME=__TIMESTAMP__
 	-D BUILD_DATE=\"2026-02-06\"
