--- a/platformio.ini
+++ b/platformio.ini
@@ -9,21 +9,27 @@
 ; https://docs.platformio.org/page/projectconf.html
 
 [platformio]
-default_envs = Lolin32Lite_ePaper
+default_envs = LolinLite_NEO-6M
 boards_dir = ./boards
 
 [common_env_data]
 build_flags = 
-	-D VERSION=\"V0.15\"
-	-D PROGNAME=\"ePaperAnchorAlarm\"
-	-D BUILD_TIME=__TIMESTAMP__
-	-D BUILD_DATE=\"2026-02-12\"
-	-D BUILD_ENV_NAME=$PIOENV
-	-D BUILD_PLATFORM=$PIOPLATFORM
+  -D VERSION=\"V0.17\"
+  -D PROGNAME=\"ePaperAnchorAlarm\"
+  -D BUILD_TIME=__TIMESTAMP__
+  -D BUILD_DATE=\"2026-02-16\"
+  -D BUILD_ENV_NAME=$PIOENV
+  -D BUILD_PLATFORM=$PIOPLATFORM
 lib_deps = 
-	zinggjm/GxEPD2@^1.6.0
-	olikraus/U8g2_for_Adafruit_GFX@^1.8.0
-src_dir = src
+  zinggjm/GxEPD2@^1.6.0
+  olikraus/U8g2_for_Adafruit_GFX@^1.8.0
+  madhephaestus/ESP32Encoder@^0.12.0
+  thomasfredericks/Bounce2@^2.72
+  tinyu-zhao/TinyGPSPlus-ESP32@^0.0.2
+
+lib_extra_dirs = c:\PlatformIO\ManualAddedLibs\ ; to include simple timer
+
+src_dir = src  
 
 [env]
 platform = espressif32
@@ -31,17 +37,27 @@ framework = arduino
 monitor_speed = 115200
 monitor_filters = esp32_exception_decoder, time, log2file
 
-[env:Lolin32Lite_ePaper]
+[env:LolinLite_NEO-6M]
 board = lolin32
 build_flags = 
-	${common_env_data.build_flags}
-	-D LOLIN32_LITE
-	-D PCB_BOARD
-	-D HAS_BUZZER
+  ${common_env_data.build_flags}
+  -D LOLIN32_LITE
+  -D PCB_BOARD
+  -D HAS_BUZZER
+  -D NEO_6M
 lib_deps = 
-	${common_env_data.lib_deps}
-	madhephaestus/ESP32Encoder@^0.12.0
-	thomasfredericks/Bounce2@^2.72
-	tinyu-zhao/TinyGPSPlus-ESP32@^0.0.2
-
+  ${common_env_data.lib_deps}
 lib_extra_dirs = c:\PlatformIO\ManualAddedLibs\ ; to include simple timer
+
+[env:LolinLite_NEO-M8N]
+board = lolin32
+build_flags = 
+  ${common_env_data.build_flags}
+  -D LOLIN32_LITE
+  -D PCB_BOARD
+  -D HAS_BUZZER
+  -D NEO_M8N
+lib_deps = 
+  ${common_env_data.lib_deps}
+lib_extra_dirs = c:\PlatformIO\ManualAddedLibs\ ; to include simple timer
+
