--- a/platformio.ini
+++ b/platformio.ini
@@ -14,10 +14,10 @@ boards_dir = ./boards
 
 [common_env_data]
 build_flags = 
-  -D VERSION=\"V0.20\"
+  -D VERSION=\"V0.22\"
   -D PROGNAME=\"ePaperAnchorAlarm\"
   -D BUILD_TIME=__TIMESTAMP__
-  -D BUILD_DATE=\"2026-02-20\"
+  -D BUILD_DATE=\"2026-02-23\"
   -D BUILD_ENV_NAME=$PIOENV
   -D BUILD_PLATFORM=$PIOPLATFORM
 lib_deps = 
@@ -57,6 +57,18 @@ build_flags =
   -D PCB_BOARD
   -D HAS_BUZZER
   -D NEO_M8N
+lib_deps = 
+  ${common_env_data.lib_deps}
+lib_extra_dirs = c:\PlatformIO\ManualAddedLibs\ ; to include simple timer
+
+[env:LolinLite_ATGM336H]
+board = lolin32
+build_flags = 
+  ${common_env_data.build_flags}
+  -D LOLIN32_LITE
+  -D PCB_BOARD
+  -D HAS_BUZZER
+  -D ATGM336H
 lib_deps = 
   ${common_env_data.lib_deps}
 lib_extra_dirs = c:\PlatformIO\ManualAddedLibs\ ; to include simple timer
